tests/errors/frontend/type/branches.expect
---CODE---
1
---STDERR---
error: mismatched types
  ┌─ tests/errors/frontend/type/branches.fpcore:5:6
  │    
2 │ ╭    (if (> x 0)
3 │ │ ╭      (let ([c 1/2])
4 │ │ │        (* c x))
  │ │ ╰───────────────' this has type `number`
5 │ │        FALSE))
  │ │        ^^^^^ expected number, found boolean
  │ ╰─────────────' `if` branches have incompatible types

